--- a/Laboratorio12/Ejercicios.html
+++ b/Laboratorio12/Ejercicios.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Ejercicio10.js"></script>
+    <h1>PRUEBA JS</h1>
+    <script src="Ejercicio11.js"></script>
 </body>
 </html>
